@@ -1838,3 +1838,4 @@ Version 15
 	Added sim/util/datacull/README
 	Set the binary flag on certain binary files in the CVS repository, oops
 	exceptions thrown in init() now have their stack traces printed out
+	Fixed bug in FacetedPortrayal, wasn't handling hitObjects and setSelected right
